// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        13,
        157,
        14,
        207,
        73,
        36,
        24,
        212,
        207,
        190,
        2,
        178,
        180,
        102,
        156,
        26,
        212,
        252,
        39,
        15,
        104,
        29,
        20,
        102,
        185,
        126,
        33,
        159,
        166,
        103,
        50,
        186,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 14597859658494902340914959301016343323022794937642623570870485517414862554093n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 6451057236209667437284193975285902978958367166177812343613860193138253705498n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 2094404405588073575485976564639003737226214989515487343954188683367154901081n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 18235055894294870498112430054726948637239053458928399455775912564502749295466n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 17527883071171751094868158649585295982123882191852491659990916768079619195969n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 18397340569571707327756719789885626609238052949544431657070783450628525295874n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 11454259585348045621103457453998030229925026271216195670908667079583608317995n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 5262203061540405458663073677065307728679140940305721310500351232602486331008n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    45,
    211,
    53,
    246,
    49,
    35,
    155,
    218,
    67,
    138,
    30,
    195,
    216,
    175,
    2,
    162,
    247,
    15,
    47,
    188,
    247,
    124,
    206,
    9,
    69,
    73,
    28,
    200,
    203,
    102,
    116,
    208,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    9,
    208,
    235,
    234,
    42,
    85,
    137,
    75,
    51,
    160,
    66,
    96,
    116,
    26,
    216,
    152,
    132,
    208,
    172,
    71,
    50,
    213,
    32,
    1,
    154,
    130,
    9,
    250,
    121,
    181,
    100,
    164,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 21446588615245250158717362907669321610574712464438164199132993196091708968110n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 7073577669948233006443153547260162200879109747909180426307588897515673877642n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 944367656178630492394538536185272496468242214961855135363823070957573043237n,
}
`;
